// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshot > displays with search button 1`] = `
<DocumentFragment>
  <form
    class="sc-bdnyFh sc-gKAaef cdHgcj is-medium aje-input"
  >
    <label
      class="sc-dlniIP coPbkZ aje-label aje-label"
      for="SearchInput-:r1:-input"
    >
      search
    </label>
    <input
      class="sc-iCoHzw sc-kEqXeH hiMmll iJJehe"
      id="SearchInput-:r1:-input"
      role="search"
      type="search"
    />
    <button
      aria-label="submit search"
      type="submit"
    >
      <i
        aria-hidden="true"
        class="sc-jSFipO bvGVgd material-icons is-medium"
      >
        search
      </i>
    </button>
  </form>
</DocumentFragment>
`;

exports[`matches snapshot > displays without button 1`] = `
<DocumentFragment>
  <form
    class="sc-bdnyFh sc-gKAaef cdHgcj is-medium aje-input"
  >
    <label
      class="sc-dlniIP coPbkZ aje-label aje-label"
      for="SearchInput-:r0:-input"
    >
      search
    </label>
    <input
      class="sc-iCoHzw sc-kEqXeH hiMmll iJJehe"
      id="SearchInput-:r0:-input"
      role="search"
      type="search"
    />
  </form>
</DocumentFragment>
`;
